--- a/index.html
+++ b/index.html
@@ -79,7 +79,7 @@
        </div>
        <div class="col-sm-6 section-row aboutRow" id="about-box">
          <h3 class="heading">Me</h3>
-         <p class="text">My name is Jarrod Yellets and I am a web developer residing in Brussels, Belgium.  I specialize in front-end development with working knowledge of back-end technologies such as node.js, express.js, and mongoDB.  I have always viewed coding as an art form, thus we should be continously pushing the boundry while having the end product functional and intuitive.  When I'm not behind the keyboard, you can find me running, boxing, chasing my Golden Retriever, Padme, or traveling Europe with my wife and daughter.</p>
+         <p class="text">My name is Jarrod Yellets and I am a web developer residing in Brussels, Belgium.  I specialize in front-end development with working knowledge of back-end technologies such as node.js, express.js, and mongoDB.  I have always viewed coding as an art form, thus we should be continuously pushing the boundary while having the end product functional and intuitive.  When I'm not behind the keyboard, you can find me running, boxing, chasing my Golden Retriever, Padme, or traveling Europe with my wife and daughter.</p>
        </div>
     </div>
 	</div>
