Added Retro YouTube Project

--- a/index.html
+++ b/index.html
@@ -93,12 +93,12 @@
       	<img class="hid screen" id="calculator" src="http://www.jarrodyellets.com/images/calculator.png">
       	<img class="hid screen" id="twitch" src="http://www.jarrodyellets.com/images/twitch.png">
       	<img class="hid screen" id="wiki" src="http://www.jarrodyellets.com/images/wiki.png">
-      	<img class="hid screen" id="weather" src="http://www.jarrodyellets.com/images/weather.png">
+      	<img class="hid screen" id="retro" src="http://www.jarrodyellets.com/images/retro.png">
       	<img class="hid screen" id="pomodoro" src="http://www.jarrodyellets.com/images/pomodoro.png">
       	<img class="hid screen" id="tic" src="http://www.jarrodyellets.com/images/tic.png">
       	<img class="hid screen" id="simon" src="http://www.jarrodyellets.com/images/simon.png">
       	<div class="buttonDiv top">
-         <button class="button" id="simBtn">Simon</button>
+         <button class="button" id="retBtn">Retro YouTube</button>
          <button class="button" id="ticBtn">TicTacToe</button>
          <button class="button" id="pomBtn">Pomodoro</button>
          <button class="button" id="calBtn">Calculator</button>
@@ -106,7 +106,7 @@
        <div class="buttonDiv">
          <button class="button bottom" id="twiBtn">Twitch TV</button>
          <button class="button bottom" id="wikBtn">Wiki Search</button>
-         <button class="button bottom" id="weaBtn">Weather</button>
+         <button class="button bottom" id="simBtn">Simon</button>
         </div>
       </div>
       
@@ -159,12 +159,12 @@
 	       	<p>HTML5, CSS3, Bootstrap, JavaScript, jQuery, and the Wikipedia API</p>
 	       	<a href="/projects/wiki/index.html" target="_blank"><button class="button">Launch!</button></a><a href="https://github.com/jarrodyellets/wikipediaViewer" target="_blank"><button class="button">View Code</button></a>
 	       </div>
-	       <div class="portAbout hidRight" id="weaAbout">
-	       	<h2>Local Weather</h2>
-	       	<p class="text">Want to know your local weather, but can't be bothered to open a window?  Then check out this  Weather app!  It shows the current conditions in C and F, and a background that changes based on current conditions.
+	       <div class="portAbout hidRight" id="retAbout">
+	       	<h2>Retro YouTube Television</h2>
+	       	<p class="text">Want to channel surf with YouTube videos?  Now you can with the Retro YouTube Television!  Each channel plays a different category of video.  Check the channel guide for complete lineup.</p> 
 	       	<h3>Built With:</h3>
-	       	<p>HTML5, CSS3, Bootstrap, JavaScript, jQuery and Dark Sky API</p>
-	       	<a href="/projects/weather/index.html" target="_blank"><button class="button">Launch!</button></a><a href="https://github.com/jarrodyellets/LocalWeather" target="_blank"><button class="button">View Code</button></a>
+	       	<p>HTML5, CSS3, JavaScript, jQuery and YouTube API</p>
+	       	<a href="/projects/retroyoutube/index.html" target="_blank"><button class="button">Launch!</button></a><a href="https://github.com/jarrodyellets/retroYouTube" target="_blank"><button class="button">View Code</button></a>
 	       </div>
     	</div>
      </div>
