--- a/index.html
+++ b/index.html
@@ -90,8 +90,8 @@
       <div class="col-xs-12 col-sm-6 section-row computer">
       	<img class="placeholder" src="http://www.jarrodyellets.com/images/laptop.png">
       	<img class="screen center" id="laptop" src="http://www.jarrodyellets.com/images/laptop.png">
-      	<img class="hid screen" id="calculator" src="http://www.jarrodyellets.com/images/calculator.png">
-      	<img class="hid screen" id="twitch" src="http://www.jarrodyellets.com/images/twitch.png">
+      	<img class="hid screen" id="radio" src="http://www.jarrodyellets.com/images/radio.png">
+      	<img class="hid screen" id="light" src="http://www.jarrodyellets.com/images/lightsabers.png">
       	<img class="hid screen" id="wiki" src="http://www.jarrodyellets.com/images/wiki.png">
       	<img class="hid screen" id="retro" src="http://www.jarrodyellets.com/images/retro.png">
       	<img class="hid screen" id="pomodoro" src="http://www.jarrodyellets.com/images/pomodoro.png">
@@ -101,10 +101,10 @@
          <button class="button" id="retBtn">Retro YouTube</button>
          <button class="button" id="ticBtn">TicTacToe</button>
          <button class="button" id="pomBtn">Pomodoro</button>
-         <button class="button" id="calBtn">Calculator</button>
+         <button class="button" id="radBtn">Analog Radio</button>
        </div>
        <div class="buttonDiv">
-         <button class="button bottom" id="twiBtn">Twitch TV</button>
+         <button class="button bottom" id="ligBtn">Lightsabers</button>
          <button class="button bottom" id="wikBtn">Wiki Search</button>
          <button class="button bottom" id="simBtn">Simon</button>
         </div>
@@ -138,19 +138,19 @@
 	       	<p>HTML5, CSS3, Bootstrap, JavaScript, and jQuery</p>
 	       	<a href="/projects/pomodoro/index.html" target="_blank"><button class="button">Launch!</button></a><a href="https://github.com/jarrodyellets/pomodoroClock" target="_blank"><button class="button">View Code</button></a>
 	       </div>
-	       <div class="portAbout hidRight" id="calAbout">
-	       	<h2>Calculator</h2>
-	       	<p class="text">Never undertip your server again with the JS Calculator!  The calculator features add, subtract, multiply, divide, percent and square root functions.  It also allows you to chain functions together for complex calculations.</p>
+	       <div class="portAbout hidRight" id="radAbout">
+	       	<h2>Analog Radio</h2>
+	       	<p class="text">Listen to radio the way it was meant to be, with the Analog Radio.  Hold the mouse down over the knob to manually tune, or click one of the five buttons to go to a preset station.</p>
 	       	<h3>Built With:</h3>
-	       	<p>HTML5, CSS3, Bootstrap, JavaScript, and jQuery</p>
-	       	<a href="/projects/calculator/index.html" target="_blank"><button class="button">Launch!</button></a><a href="https://github.com/jarrodyellets/Calculator" target="_blank"><button class="button">View Code</button></a>
+	       	<p>HTML5, CSS3, JavaScript, and jQuery</p>
+	       	<a href="/projects/analogradio/index.html" target="_blank"><button class="button">Launch!</button></a><a href="https://github.com/jarrodyellets/analogRadio" target="_blank"><button class="button">View Code</button></a>
 	       </div>
-	       <div class="portAbout hidRight" id="twiAbout">
-	       	<h2>Twitch TV</h2>
-	       	<p class="text">Want to see which of Twitch's top users are currently streaming?  This app does just that.  Features dynamic search, toggle between online and offline users, and see which games current streamers are playing.</p>
+	       <div class="portAbout hidRight" id="ligAbout">
+	       	<h2>Lightsabers</h2>
+	       	<p class="text">Pick one. But beware, the dark side of the force clouds everything.  Click on hilt to activate lightaber.</p>
 	       	<h3>Built With:</h3>
-	       	<p>HTML5, CSS3, Bootstrap, JavaScript, jQuery, and Twitch JSON API</p>
-	       	<a href="/projects/twitch/index.html" target="_blank"><button class="button">Launch!</button></a><a href="https://github.com/jarrodyellets/twitchTV" target="_blank"><button class="button">View Code</button></a>
+	       	<p>HTML5, Sass, JavaScript, and jQuery</p>
+	       	<a href="/projects/kylorenlightsaber/index.html" target="_blank"><button class="button">Kylo Ren</button></a><a href="/projects/anakinlightsaber/index.html" target="_blank"><button class="button">Anakin Skywalker</button></a><a href="https://github.com/jarrodyellets" target="_blank"><button class="button">View Code</button></a>
 	       </div>
 	       <div class="portAbout hidRight" id="wikAbout">
 	       	<h2>Wikipedia Search</h2>
