Added Lightsaber..spelled right

--- a/index.html
+++ b/index.html
@@ -147,7 +147,7 @@
 	       </div>
 	       <div class="portAbout hidRight" id="ligAbout">
 	       	<h2>Lightsabers</h2>
-	       	<p class="text">Pick one. But beware, the dark side of the force clouds everything.  Click on hilt to activate lightaber.</p>
+	       	<p class="text">Pick one. But beware, the dark side of the force clouds everything.  Click on hilt to activate lightsaber.</p>
 	       	<h3>Built With:</h3>
 	       	<p>HTML5, Sass, JavaScript, and jQuery</p>
 	       	<a href="/projects/kylorenlightsaber/index.html" target="_blank"><button class="button">Kylo Ren</button></a><a href="/projects/anakinlightsaber/index.html" target="_blank"><button class="button">Anakin Skywalker</button></a><a href="https://github.com/jarrodyellets" target="_blank"><button class="button">View Code</button></a>
