Fixed Lightsaber Buttons

--- a/index.html
+++ b/index.html
@@ -114,7 +114,7 @@
        <div class="portfolioText">
 	       <div class="portAbout" id="filler">
 	        <h2>Welcome</h2>
-	       	<p class="text">Welcome to my portfolio.  Please look around, play with the games, and try and break the apps.  If you have any questions or comments, please don't hesitate to contact me.  You can see all of the source code on and the rest of my projects on GitHub and CodePen. If you want to see what I am currently building, please following me on Twitter.</p>
+	       	<p class="text">Welcome to my portfolio.  Please look around, play with the games, and try and break the apps.  If you have any questions or comments, please don't hesitate to contact me.  You can see all of the source code and the rest of my projects on GitHub and CodePen. If you want to see what I am currently building, please following me on Twitter.</p>
 	       	<a href="https://github.com/jarrodyellets" target="_blank"><button class="button">View All Code</button></a><a href="https://twitter.com/jarrodyellets" target="_blank"><button class="button">Follow Me</button></a>
 	       </div>  
 	       <div class="portAbout hidRight" id="simAbout">
@@ -150,7 +150,7 @@
 	       	<p class="text">Pick one. But beware, the dark side of the force clouds everything.  Click on hilt to activate lightsaber.</p>
 	       	<h3>Built With:</h3>
 	       	<p>HTML5, Sass, JavaScript, and jQuery</p>
-	       	<a href="/projects/kylorenlightsaber/index.html" target="_blank"><button class="button">Kylo Ren</button></a><a href="/projects/anakinlightsaber/index.html" target="_blank"><button class="button">Anakin Skywalker</button></a><a href="https://github.com/jarrodyellets" target="_blank"><button class="button">View Code</button></a>
+	       	<a href="/projects/kylorenlightsaber/index.html" target="_blank"><button class="button">Kylo Ren</button></a><a href="/projects/anakinlightsaber/index.html" target="_blank"><button class="button">Anakin Skywalker</button></a>
 	       </div>
 	       <div class="portAbout hidRight" id="wikAbout">
 	       	<h2>Wikipedia Search</h2>
