--- a/index.html
+++ b/index.html
@@ -94,13 +94,13 @@
       	<img class="hid screen" id="light" src="http://www.jarrodyellets.com/images/lightsabers.png">
       	<img class="hid screen" id="wiki" src="http://www.jarrodyellets.com/images/wiki.png">
       	<img class="hid screen" id="retro" src="http://www.jarrodyellets.com/images/retro.png">
-      	<img class="hid screen" id="pomodoro" src="http://www.jarrodyellets.com/images/pomodoro.png">
-      	<img class="hid screen" id="tic" src="http://www.jarrodyellets.com/images/tic.png">
+      	<img class="hid screen" id="newspaper" src="http://www.jarrodyellets.com/images/newspaper.png">
+      	<img class="hid screen" id="ten" src="http://www.jarrodyellets.com/images/jukebox.png">
       	<img class="hid screen" id="simon" src="http://www.jarrodyellets.com/images/simon.png">
       	<div class="buttonDiv top">
+      	 <button class="button" id="tenBtn">Jukebox</button>
          <button class="button" id="retBtn">Retro YouTube</button>
-         <button class="button" id="ticBtn">TicTacToe</button>
-         <button class="button" id="pomBtn">Pomodoro</button>
+         <button class="button" id="newBtn">Dynamic Newspaper</button>
          <button class="button" id="radBtn">Analog Radio</button>
        </div>
        <div class="buttonDiv">
@@ -124,19 +124,19 @@
 	       	<p>HTML5, CSS3, JavaScript, and jQuery</p>
 	       	<a href="/projects/simon/index.html" target="_blank"><button class="button">Launch!</button></a><a href="https://github.com/jarrodyellets/simon" target="_blank"><button class="button">View Code</button></a>
 	       </div>
-	       <div class="portAbout hidRight" id="ticAbout">
-	       	<h2>Tic Tac Toe</h2>
-	       	<p class="text">Do you have what it takes to beat the unbeatable Tic Tac Toe game?  Probably not.  The hard mode of this game uses Newell and Simon's algorithm and is unbeatable.  Best try you luck on the easy mode.</p>
+	       <div class="portAbout hidRight" id="tenAbout">
+	       	<h2>Top Ten Jukebox</h2>
+	       	<p class="text">Allows you to see and play the Billboard top ten songs from any date.  Integrated with Spotify to allow you to save any of the songs to existing or new playlists.</p>
 	       	<h2>Built With:</h2>
-	       	<p>HTML5, CSS3, Bootstrap, JavaScript, and jQuery</p>
-	       	<a href="/projects/tictactoe/index.html" target="_blank"><button class="button">Launch!</button></a><a href="https://github.com/jarrodyellets/ticTacToe" target="_blank"><button class="button">View Code</button></a>
+	       	<p>Node.js, Express.js, HTML5, CSS3, JavaScript, jQuery, and Spotify API</p>
+	       	<a href="https://sheltered-basin-77574.herokuapp.com" target="_blank"><button class="button">Launch!</button></a><a href="https://github.com/jarrodyellets/topTenJukebox" target="_blank"><button class="button">View Code</button></a>
 	       </div>
-	       <div class="portAbout hidRight" id="pomAbout">
-	       	<h2>Pomodoro Clock</h2>
-	       	<p class="text">Struggling with work productivity?  Look no further than the Pomodoro Clock!  This clock allows you to set custom intervals for work and break sessions.  Custom sounds and lights alert the user when a session has completed.</p>
+	       <div class="portAbout hidRight" id="newAbout">
+	       	<h2>Dynamic Newspaper</h2>
+	       	<p class="text">Allows you to see all of the lastest news in one place.  The dynamic newspaper will load the lastest headlines upon refresh.  Click on the article to view story from original source.</p>
 	       	<h3>Built With:</h3>
-	       	<p>HTML5, CSS3, Bootstrap, JavaScript, and jQuery</p>
-	       	<a href="/projects/pomodoro/index.html" target="_blank"><button class="button">Launch!</button></a><a href="https://github.com/jarrodyellets/pomodoroClock" target="_blank"><button class="button">View Code</button></a>
+	       	<p>HTML5, CSS3, JavaScript, and jQuery</p>
+	       	<a href="/projects/newspaper/index.html" target="_blank"><button class="button">Launch!</button></a><a href="https://github.com/jarrodyellets/dynamicNewspaper" target="_blank"><button class="button">View Code</button></a>
 	       </div>
 	       <div class="portAbout hidRight" id="radAbout">
 	       	<h2>Analog Radio</h2>
@@ -199,7 +199,7 @@
 	</div>
 	<footer>
     	<div class="foot">
-      		<p>&copy; Jarrod Yellets | 2017</p>
+      		<p>&copy; Jarrod Yellets | 2018</p>
     	</div>
     </footer>
 </body>
