Fixed newspaper button

--- a/index.html
+++ b/index.html
@@ -100,7 +100,7 @@
       	<div class="buttonDiv top">
       	 <button class="button" id="tenBtn">Jukebox</button>
          <button class="button" id="retBtn">Retro YouTube</button>
-         <button class="button" id="newBtn">Dynamic Newspaper</button>
+         <button class="button" id="newBtn">Newspaper</button>
          <button class="button" id="radBtn">Analog Radio</button>
        </div>
        <div class="buttonDiv">
