Added Hans Boathouse

--- a/index.html
+++ b/index.html
@@ -92,7 +92,7 @@
       	<img class="screen center" id="laptop" src="http://www.jarrodyellets.com/images/laptop.png">
       	<img class="hid screen" id="radio" src="http://www.jarrodyellets.com/images/radio.png">
       	<img class="hid screen" id="light" src="http://www.jarrodyellets.com/images/lightsabers.png">
-      	<img class="hid screen" id="wiki" src="http://www.jarrodyellets.com/images/wiki.png">
+      	<img class="hid screen" id="han" src="http://www.jarrodyellets.com/images/hans.png">
       	<img class="hid screen" id="retro" src="http://www.jarrodyellets.com/images/retro.png">
       	<img class="hid screen" id="newspaper" src="http://www.jarrodyellets.com/images/newspaper.png">
       	<img class="hid screen" id="ten" src="http://www.jarrodyellets.com/images/jukebox.png">
@@ -105,7 +105,7 @@
        </div>
        <div class="buttonDiv">
          <button class="button bottom" id="ligBtn">Lightsabers</button>
-         <button class="button bottom" id="wikBtn">Wiki Search</button>
+         <button class="button bottom" id="hanBtn">Restaurant</button>
          <button class="button bottom" id="simBtn">Simon</button>
         </div>
       </div>
@@ -152,12 +152,12 @@
 	       	<p>HTML5, Sass, JavaScript, and jQuery</p>
 	       	<a href="/projects/kylorenlightsaber/index.html" target="_blank"><button class="button">Kylo Ren</button></a><a href="/projects/anakinlightsaber/index.html" target="_blank"><button class="button">Anakin Skywalker</button></a>
 	       </div>
-	       <div class="portAbout hidRight" id="wikAbout">
-	       	<h2>Wikipedia Search</h2>
-	       	<p class="text">Need to find a Wikipedia article right away?  Then the Wikipedia Search Engine is for you!  Returns the top 10 results based on your search critieria and an auto-populated list to help you search.</p>
+	       <div class="portAbout hidRight" id="hanAbout">
+	       	<h2>Hans' Boathouse</h2>
+	       	<p class="text">Website created for Brussels seafood restaurant, Hans' Boathouse.  Responsive layout created with CSS Grid.</p>
 	       	<h3>Built With:</h3>
-	       	<p>HTML5, CSS3, Bootstrap, JavaScript, jQuery, and the Wikipedia API</p>
-	       	<a href="/projects/wiki/index.html" target="_blank"><button class="button">Launch!</button></a><a href="https://github.com/jarrodyellets/wikipediaViewer" target="_blank"><button class="button">View Code</button></a>
+	       	<p>HTML5, CSS3, Bootstrap, JavaScript, and jQuery</p>
+	       	<a href="/projects/hansboathouse/index.html" target="_blank"><button class="button">Launch!</button></a><a href="https://github.com/jarrodyellets/hansboathouse" target="_blank"><button class="button">View Code</button></a>
 	       </div>
 	       <div class="portAbout hidRight" id="retAbout">
 	       	<h2>Retro YouTube Television</h2>
@@ -198,9 +198,9 @@
 
 	</div>
 	<footer>
-    	<div class="foot">
-      		<p>&copy; Jarrod Yellets | 2018</p>
-    	</div>
-    </footer>
+  	<div class="foot">
+    		<p>&copy; Jarrod Yellets | 2018</p>
+  	</div>
+   </footer>
 </body>
 </html>
