Fixed Jukebox Description

--- a/index.html
+++ b/index.html
@@ -126,7 +126,7 @@
 	       </div>
 	       <div class="portAbout hidRight" id="tenAbout">
 	       	<h2>Top Ten Jukebox</h2>
-	       	<p class="text">Allows you to see and play the Billboard top ten songs from any date.  Integrated with Spotify to allow you to save any of the songs to existing or new playlists.</p>
+	       	<p class="text">Allows you to see and play the Billboard top ten songs from any date.  Integrated with Spotify to allow you to save any of the songs to a new or existing playlist.</p>
 	       	<h2>Built With:</h2>
 	       	<p>Node.js, Express.js, HTML5, CSS3, JavaScript, jQuery, and Spotify API</p>
 	       	<a href="https://sheltered-basin-77574.herokuapp.com" target="_blank"><button class="button">Launch!</button></a><a href="https://github.com/jarrodyellets/topTenJukebox" target="_blank"><button class="button">View Code</button></a>
