--- a/index.html
+++ b/index.html
@@ -96,7 +96,7 @@
       	<img class="hid screen" id="retro" src="http://www.jarrodyellets.com/images/retro.png">
       	<img class="hid screen" id="newspaper" src="http://www.jarrodyellets.com/images/newspaper.png">
       	<img class="hid screen" id="ten" src="http://www.jarrodyellets.com/images/jukebox.png">
-      	<img class="hid screen" id="simon" src="http://www.jarrodyellets.com/images/simon.png">
+      	<img class="hid screen" id="strikes" src="http://www.jarrodyellets.com/images/strikes.png">
       	<div class="buttonDiv top">
       	 <button class="button" id="tenBtn">Jukebox</button>
          <button class="button" id="retBtn">Retro YouTube</button>
@@ -106,7 +106,7 @@
        <div class="buttonDiv">
          <button class="button bottom" id="ligBtn">Lightsabers</button>
          <button class="button bottom" id="hanBtn">Restaurant</button>
-         <button class="button bottom" id="simBtn">Simon</button>
+         <button class="button bottom" id="strBtn">3 Strikes</button>
         </div>
       </div>
       
@@ -117,12 +117,12 @@
 	       	<p class="text">Welcome to my portfolio.  Please look around, play with the games, and try and break the apps.  If you have any questions or comments, please don't hesitate to contact me.  You can see all of the source code and the rest of my projects on GitHub and CodePen. If you want to see what I am currently building, please following me on Twitter.</p>
 	       	<a href="https://github.com/jarrodyellets" target="_blank"><button class="button">View All Code</button></a><a href="https://twitter.com/jarrodyellets" target="_blank"><button class="button">Follow Me</button></a>
 	       </div>  
-	       <div class="portAbout hidRight" id="simAbout">
-	       	<h2>Simon Game</h2>
-	       	<p class="text">Blast from the past!  Play your favorite childhood game with Simon.  Features running count current sequence, custom sounds, and strict mode, which offers a no mercy version of the game.</p>
+	       <div class="portAbout hidRight" id="strAbout">
+	       	<h2>3 Strikes Game</h2>
+	       	<p class="text">Come on down!  Play the classic game from the Price is Right!  Pick the tokens from the pouch to correctly guess the price of the car before you get 3 strikes.</p>
 	       	<h3>Built With:</h3>
 	       	<p>HTML5, CSS3, JavaScript, and jQuery</p>
-	       	<a href="/projects/simon/index.html" target="_blank"><button class="button">Launch!</button></a><a href="https://github.com/jarrodyellets/simon" target="_blank"><button class="button">View Code</button></a>
+	       	<a href="/projects/3strikes/index.html" target="_blank"><button class="button">Launch!</button></a><a href="https://github.com/jarrodyellets/3Strikes" target="_blank"><button class="button">View Code</button></a>
 	       </div>
 	       <div class="portAbout hidRight" id="tenAbout">
 	       	<h2>Top Ten Jukebox</h2>
