Updated Stack Icons

--- a/index.html
+++ b/index.html
@@ -64,16 +64,18 @@
       	<h3 class="heading">My Stack</h3>
       	<div class="icons">
 	        <div class="frontEnd">
-	       		<i class="devicon-html5-plain-wordmark colored icon html"></i>
-	         	<i class="devicon-css3-plain-wordmark colored icon css"></i>
-	         	<i class="devicon-bootstrap-plain colored icon bootstrap"></i>
-	         	<i class="devicon-javascript-plain colored icon javascript"></i>
-	         	<i class="devicon-jquery-plain-wordmark colored icon jquery"></i>
+	       		<i class="devicon-html5-plain-wordmark colored icon"></i>
+	         	<i class="devicon-css3-plain-wordmark colored icon"></i>
+	         	<i class="devicon-sass-original colored icon"></i>
+	         	<i class="devicon-javascript-plain colored icon"></i>
+	         	<i class="devicon-react-original-wordmark colored icon"></i>
 	        </div>
 	        <div class="backEnd">
-	         	<i class="devicon-nodejs-plain-wordmark colored icon node"></i>
-	         	<i class="devicon-mongodb-plain-wordmark colored icon mongo"></i>
-	         	<i class="devicon-express-original-wordmark icon express"></i>
+	        	<i class="devicon-jquery-plain-wordmark colored icon"></i>
+	         	<i class="devicon-nodejs-plain-wordmark colored icon"></i>
+	         	<i class="devicon-mongodb-plain-wordmark colored icon"></i>
+	         	<i class="devicon-express-original-wordmark icon"></i>
+	         	<i class="devicon-git-plain-wordmark colored icon"></i>
 	        </div>
 	      </div>
        </div>
@@ -121,7 +123,7 @@
 	       	<h2>3 Strikes Game</h2>
 	       	<p class="text">Come on down!  Play the classic game from the Price is Right!  Pick the tokens from the pouch to correctly guess the price of the car before you get 3 strikes.</p>
 	       	<h3>Built With:</h3>
-	       	<p>HTML5, CSS3, JavaScript, and jQuery</p>
+	       	<p>HTML5, CSS3, Sass, JavaScript, and jQuery</p>
 	       	<a href="/projects/3strikes/index.html" target="_blank"><button class="button">Launch!</button></a><a href="https://github.com/jarrodyellets/3Strikes" target="_blank"><button class="button">View Code</button></a>
 	       </div>
 	       <div class="portAbout hidRight" id="tenAbout">
