Added Drum Machine

--- a/index.html
+++ b/index.html
@@ -98,7 +98,7 @@
       	<img class="hid screen" id="retro" src="http://www.jarrodyellets.com/images/retro.png">
       	<img class="hid screen" id="newspaper" src="http://www.jarrodyellets.com/images/newspaper.png">
       	<img class="hid screen" id="ten" src="http://www.jarrodyellets.com/images/jukebox.png">
-      	<img class="hid screen" id="strikes" src="http://www.jarrodyellets.com/images/strikes.png">
+      	<img class="hid screen" id="moog" src="http://www.jarrodyellets.com/images/moog.png">
       	<div class="buttonDiv top">
       	 <button class="button" id="tenBtn">Jukebox</button>
          <button class="button" id="retBtn">Retro YouTube</button>
@@ -108,7 +108,7 @@
        <div class="buttonDiv">
          <button class="button bottom" id="ligBtn">Lightsabers</button>
          <button class="button bottom" id="hanBtn">Restaurant</button>
-         <button class="button bottom" id="strBtn">3 Strikes</button>
+         <button class="button bottom" id="mooBtn">Drum Machine</button>
         </div>
       </div>
       
@@ -119,12 +119,12 @@
 	       	<p class="text">Welcome to my portfolio.  Please look around, play with the games, and try and break the apps.  If you have any questions or comments, please don't hesitate to contact me.  You can see all of the source code and the rest of my projects on GitHub and CodePen. If you want to see what I am currently building, please following me on Twitter.</p>
 	       	<a href="https://github.com/jarrodyellets" target="_blank"><button class="button">View All Code</button></a><a href="https://twitter.com/jarrodyellets" target="_blank"><button class="button">Follow Me</button></a>
 	       </div>  
-	       <div class="portAbout hidRight" id="strAbout">
-	       	<h2>3 Strikes Game</h2>
-	       	<p class="text">Come on down!  Play the classic game from the Price is Right!  Pick the tokens from the pouch to correctly guess the price of the car before you get 3 strikes.</p>
+	       <div class="portAbout hidRight" id="mooAbout">
+	       	<h2>Moog Drum Machine</h2>
+	       	<p class="text">Built with React, the Moog Drum Machine allows you to combine all and alter the sounds from your favorite synthesizer.  Choose between two sound banks, as well as adjustments for volume and tempo.</p>
 	       	<h3>Built With:</h3>
-	       	<p>HTML5, CSS3, Sass, JavaScript, and jQuery</p>
-	       	<a href="/projects/3strikes/index.html" target="_blank"><button class="button">Launch!</button></a><a href="https://github.com/jarrodyellets/3Strikes" target="_blank"><button class="button">View Code</button></a>
+	       	<p>HTML5, CSS3, JavaScript, and React</p>
+	       	<a href="https://stormy-gorge-17872.herokuapp.com/" target="_blank"><button class="button">Launch!</button></a><a href="https://github.com/jarrodyellets/drumMachine" target="_blank"><button class="button">View Code</button></a>
 	       </div>
 	       <div class="portAbout hidRight" id="tenAbout">
 	       	<h2>Top Ten Jukebox</h2>
