--- a/index.html
+++ b/index.html
@@ -121,7 +121,7 @@
 	       </div>  
 	       <div class="portAbout hidRight" id="mooAbout">
 	       	<h2>Moog Drum Machine</h2>
-	       	<p class="text">Built with React, the Moog Drum Machine allows you to combine all and alter the sounds from your favorite synthesizer.  Choose between two sound banks, as well as adjustments for volume and tempo.</p>
+	       	<p class="text">Built with React, the Moog Drum Machine allows you to combine and alter the sounds from your favorite synthesizer.  Choose between two sound banks, as well as adjustments for volume and tempo.</p>
 	       	<h3>Built With:</h3>
 	       	<p>HTML5, CSS3, JavaScript, and React</p>
 	       	<a href="https://stormy-gorge-17872.herokuapp.com/" target="_blank"><button class="button">Launch!</button></a><a href="https://github.com/jarrodyellets/drumMachine" target="_blank"><button class="button">View Code</button></a>
