Fixed drum machine link

--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
 	<script src="https://use.fontawesome.com/f1ba2b81d2.js"></script>
 	<base href="http://www.jarrodyellets.com">
 
-	
+
 </head>
 <body>
 	<div class="container-fluid main-window">
@@ -43,7 +43,7 @@
 				</div>
 			</div>
 		</nav>
-		
+
 		<div class="banner">
 			<h1 class="name">Jarrod Yellets</h1>
 			<div class="menu">
@@ -111,20 +111,20 @@
          <button class="button bottom" id="mooBtn">Drum Machine</button>
         </div>
       </div>
-      
+
        <div class="col-xs-12 col-sm-6 section-row">
        <div class="portfolioText">
 	       <div class="portAbout" id="filler">
 	        <h2>Welcome</h2>
 	       	<p class="text">Welcome to my portfolio.  Please look around, play with the games, and try and break the apps.  If you have any questions or comments, please don't hesitate to contact me.  You can see all of the source code and the rest of my projects on GitHub and CodePen. If you want to see what I am currently building, please following me on Twitter.</p>
 	       	<a href="https://github.com/jarrodyellets" target="_blank"><button class="button">View All Code</button></a><a href="https://twitter.com/jarrodyellets" target="_blank"><button class="button">Follow Me</button></a>
-	       </div>  
+	       </div>
 	       <div class="portAbout hidRight" id="mooAbout">
 	       	<h2>Moog Drum Machine</h2>
 	       	<p class="text">Built with React, the Moog Drum Machine allows you to combine and alter the sounds from your favorite synthesizer.  Choose between two sound banks, as well as adjustments for volume and tempo.</p>
 	       	<h3>Built With:</h3>
 	       	<p>HTML5, CSS3, JavaScript, and React</p>
-	       	<a href="https://stormy-gorge-17872.herokuapp.com/" target="_blank"><button class="button">Launch!</button></a><a href="https://github.com/jarrodyellets/drumMachine" target="_blank"><button class="button">View Code</button></a>
+	       	<a href="https://polar-wildwood-45548.herokuapp.com/" target="_blank"><button class="button">Launch!</button></a><a href="https://github.com/jarrodyellets/drumMachine" target="_blank"><button class="button">View Code</button></a>
 	       </div>
 	       <div class="portAbout hidRight" id="tenAbout">
 	       	<h2>Top Ten Jukebox</h2>
@@ -163,7 +163,7 @@
 	       </div>
 	       <div class="portAbout hidRight" id="retAbout">
 	       	<h2>Retro YouTube Television</h2>
-	       	<p class="text">Want to channel surf with YouTube videos?  Now you can with the Retro YouTube Television!  Each channel plays a different category of video.  Check the channel guide for complete lineup.</p> 
+	       	<p class="text">Want to channel surf with YouTube videos?  Now you can with the Retro YouTube Television!  Each channel plays a different category of video.  Check the channel guide for complete lineup.</p>
 	       	<h3>Built With:</h3>
 	       	<p>HTML5, CSS3, JavaScript, jQuery and YouTube API</p>
 	       	<a href="/projects/retroyoutube/index.html" target="_blank"><button class="button">Launch!</button></a><a href="https://github.com/jarrodyellets/retroYouTube" target="_blank"><button class="button">View Code</button></a>
@@ -172,7 +172,7 @@
      </div>
     </div>
 	</div>
-	
+
 	<div class="container-fluid contact">
 		<h2 class="title">Contact</h2>
 		<div class"row">
@@ -191,7 +191,7 @@
 					<div class="form-group">
 						<input type="text" class="form-control input" name="name" placeholder="Name" required>
 						<input type="email" class="form-control input" name="email" placeholder="Email" required>
-						<textarea class="form-control input" name="message" placeholder="Message" required></textarea> 
+						<textarea class="form-control input" name="message" placeholder="Message" required></textarea>
 						<button type="submit" class="btn btn-default">Submit</button>
 					</div>
 				</form>
