--- a/index.html
+++ b/index.html
@@ -93,21 +93,21 @@
       	<img class="placeholder" src="http://www.jarrodyellets.com/images/laptop.png">
       	<img class="screen center" id="laptop" src="http://www.jarrodyellets.com/images/laptop.png">
       	<img class="hid screen" id="radio" src="http://www.jarrodyellets.com/images/radio.png">
-      	<img class="hid screen" id="light" src="http://www.jarrodyellets.com/images/lightsabers.png">
+      	<img class="hid screen" id="pillow" src="http://www.jarrodyellets.com/images/pillow.png">
       	<img class="hid screen" id="han" src="http://www.jarrodyellets.com/images/hans.png">
       	<img class="hid screen" id="retro" src="http://www.jarrodyellets.com/images/retro.png">
       	<img class="hid screen" id="newspaper" src="http://www.jarrodyellets.com/images/newspaper.png">
       	<img class="hid screen" id="ten" src="http://www.jarrodyellets.com/images/jukebox.png">
       	<img class="hid screen" id="moog" src="http://www.jarrodyellets.com/images/moog.png">
       	<div class="buttonDiv top">
+         <button class="button" id="pilBtn">Real Estate</button>
+         <button class="button" id="hanBtn">Restaurant</button>
       	 <button class="button" id="tenBtn">Jukebox</button>
          <button class="button" id="retBtn">Retro YouTube</button>
-         <button class="button" id="newBtn">Newspaper</button>
-         <button class="button" id="radBtn">Analog Radio</button>
        </div>
        <div class="buttonDiv">
-         <button class="button bottom" id="ligBtn">Lightsabers</button>
-         <button class="button bottom" id="hanBtn">Restaurant</button>
+       	 <button class="button bottom" id="newBtn">Newspaper</button>
+         <button class="button bottom" id="radBtn">Analog Radio</button>
          <button class="button bottom" id="mooBtn">Drum Machine</button>
         </div>
       </div>
@@ -147,12 +147,12 @@
 	       	<p>HTML5, CSS3, JavaScript, and jQuery</p>
 	       	<a href="/projects/analogradio/index.html" target="_blank"><button class="button">Launch!</button></a><a href="https://github.com/jarrodyellets/analogRadio" target="_blank"><button class="button">View Code</button></a>
 	       </div>
-	       <div class="portAbout hidRight" id="ligAbout">
-	       	<h2>Lightsabers</h2>
-	       	<p class="text">Pick one. But beware, the dark side of the force clouds everything.  Click on hilt to activate lightsaber.</p>
+	       <div class="portAbout hidRight" id="pilAbout">
+	       	<h2>Pillow Real Estate</h2>
+	       	<p class="text">Built with React, the Pillow real estate portal allows you to search and view homes for sale and rent.  The design is based on Zillow.com</p>
 	       	<h3>Built With:</h3>
-	       	<p>HTML5, Sass, JavaScript, and jQuery</p>
-	       	<a href="/projects/kylorenlightsaber/index.html" target="_blank"><button class="button">Kylo Ren</button></a><a href="/projects/anakinlightsaber/index.html" target="_blank"><button class="button">Anakin Skywalker</button></a>
+	       	<p>Node.js, Express.js, HTML5, CSS3, JavaScript, React, and Google Maps API</p>
+	       	<a href="https://shielded-plains-18488.herokuapp.com/" target="_blank"><button class="button">Launch!</button></a><a href="https://github.com/jarrodyellets/realEstate" target="_blank"><button class="button">View Code</button></a>
 	       </div>
 	       <div class="portAbout hidRight" id="hanAbout">
 	       	<h2>Hans' Boathouse</h2>
