--- a/index.html
+++ b/index.html
@@ -115,54 +115,54 @@
        <div class="col-xs-12 col-sm-6 section-row">
        <div class="portfolioText">
 	       <div class="portAbout" id="filler">
-	        <h2>Welcome</h2>
+	        <h2 class="portTitle">Welcome</h2>
 	       	<p class="text">Welcome to my portfolio.  Please look around, play with the games, and try and break the apps.  If you have any questions or comments, please don't hesitate to contact me.  You can see all of the source code and the rest of my projects on GitHub and CodePen. If you want to see what I am currently building, please following me on Twitter.</p>
 	       	<a href="https://github.com/jarrodyellets" target="_blank"><button class="button">View All Code</button></a><a href="https://twitter.com/jarrodyellets" target="_blank"><button class="button">Follow Me</button></a>
 	       </div>
 	       <div class="portAbout hidRight" id="mooAbout">
-	       	<h2>Moog Drum Machine</h2>
+	       	<h2 class="portTitle">Moog Drum Machine</h2>
 	       	<p class="text">Built with React, the Moog Drum Machine allows you to combine and alter the sounds from your favorite synthesizer.  Choose between two sound banks, as well as adjustments for volume and tempo.</p>
 	       	<h3>Built With:</h3>
 	       	<p>HTML5, CSS3, JavaScript, and React</p>
 	       	<a href="https://polar-wildwood-45548.herokuapp.com/" target="_blank"><button class="button">Launch!</button></a><a href="https://github.com/jarrodyellets/drumMachine" target="_blank"><button class="button">View Code</button></a>
 	       </div>
 	       <div class="portAbout hidRight" id="tenAbout">
-	       	<h2>Top Ten Jukebox</h2>
+	       	<h2 class="portTitle">Top Ten Jukebox</h2>
 	       	<p class="text">Allows you to see and play the Billboard top ten songs from any date.  Integrated with Spotify to allow you to save any of the songs to a new or existing playlist.</p>
 	       	<h2>Built With:</h2>
 	       	<p>Node.js, Express.js, HTML5, CSS3, JavaScript, jQuery, and Spotify API</p>
 	       	<a href="https://sheltered-basin-77574.herokuapp.com" target="_blank"><button class="button">Launch!</button></a><a href="https://github.com/jarrodyellets/topTenJukebox" target="_blank"><button class="button">View Code</button></a>
 	       </div>
 	       <div class="portAbout hidRight" id="newAbout">
-	       	<h2>Dynamic Newspaper</h2>
+	       	<h2 class="portTitle">Dynamic Newspaper</h2>
 	       	<p class="text">Allows you to see all of the lastest news in one place.  The dynamic newspaper will load the lastest headlines upon refresh.  Click on the article to view story from original source.</p>
 	       	<h3>Built With:</h3>
 	       	<p>HTML5, CSS3, JavaScript, and jQuery</p>
 	       	<a href="/projects/newspaper/index.html" target="_blank"><button class="button">Launch!</button></a><a href="https://github.com/jarrodyellets/dynamicNewspaper" target="_blank"><button class="button">View Code</button></a>
 	       </div>
 	       <div class="portAbout hidRight" id="radAbout">
-	       	<h2>Analog Radio</h2>
+	       	<h2 class="portTitle">Analog Radio</h2>
 	       	<p class="text">Listen to radio the way it was meant to be, with the Analog Radio.  Hold the mouse down over the knob to manually tune, or click one of the five buttons to go to a preset station.</p>
 	       	<h3>Built With:</h3>
 	       	<p>HTML5, CSS3, JavaScript, and jQuery</p>
 	       	<a href="/projects/analogradio/index.html" target="_blank"><button class="button">Launch!</button></a><a href="https://github.com/jarrodyellets/analogRadio" target="_blank"><button class="button">View Code</button></a>
 	       </div>
 	       <div class="portAbout hidRight" id="pilAbout">
-	       	<h2>Pillow Real Estate</h2>
+	       	<h2 class="portTitle">Pillow Real Estate</h2>
 	       	<p class="text">Built with React, the Pillow real estate portal allows you to search and view homes for sale and rent.  The design is based on Zillow.com</p>
 	       	<h3>Built With:</h3>
 	       	<p>Node.js, Express.js, HTML5, CSS3, JavaScript, React, and Google Maps API</p>
 	       	<a href="https://shielded-plains-18488.herokuapp.com/" target="_blank"><button class="button">Launch!</button></a><a href="https://github.com/jarrodyellets/realEstate" target="_blank"><button class="button">View Code</button></a>
 	       </div>
 	       <div class="portAbout hidRight" id="hanAbout">
-	       	<h2>Hans' Boathouse</h2>
+	       	<h2 class="portTitle">Hans' Boathouse</h2>
 	       	<p class="text">Website created for Brussels seafood restaurant, Hans' Boathouse.  Responsive layout created with CSS Grid.</p>
 	       	<h3>Built With:</h3>
 	       	<p>HTML5, CSS3, Bootstrap, JavaScript, and jQuery</p>
 	       	<a href="/projects/hansboathouse/index.html" target="_blank"><button class="button">Launch!</button></a><a href="https://github.com/jarrodyellets/hansboathouse" target="_blank"><button class="button">View Code</button></a>
 	       </div>
 	       <div class="portAbout hidRight" id="retAbout">
-	       	<h2>Retro YouTube Television</h2>
+	       	<h2 class="portTitle">Retro YouTube Television</h2>
 	       	<p class="text">Want to channel surf with YouTube videos?  Now you can with the Retro YouTube Television!  Each channel plays a different category of video.  Check the channel guide for complete lineup.</p>
 	       	<h3>Built With:</h3>
 	       	<p>HTML5, CSS3, JavaScript, jQuery and YouTube API</p>
