Fixed typo in real estate

--- a/index.html
+++ b/index.html
@@ -149,7 +149,7 @@
 	       </div>
 	       <div class="portAbout hidRight" id="pilAbout">
 	       	<h2 class="portTitle">Pillow Real Estate</h2>
-	       	<p class="text">Built with React, the Pillow real estate portal allows you to search and view homes for sale and rent.  The design is based on Zillow.com</p>
+	       	<p class="text">Built with React, the Pillow real estate portal allows you to search and view homes for sale or rent.  The design is based on Zillow.com</p>
 	       	<h3>Built With:</h3>
 	       	<p>Node.js, Express.js, HTML5, CSS3, JavaScript, React, and Google Maps API</p>
 	       	<a href="https://shielded-plains-18488.herokuapp.com/" target="_blank"><button class="button">Launch!</button></a><a href="https://github.com/jarrodyellets/realEstate" target="_blank"><button class="button">View Code</button></a>
